# neural-networks-project

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROGRESS.md  README.md  main.py  plan_hier_bigru.md  plan_hier_set_v2.md  proposal.md  proposal_description.md  proposal_draft.md  pyproject.toml  sources.md
docs/: 1_environment.md  2_eda.md  3_data_pipeline.md  4_models.md  5_experiments.md  6_implementation_plan.md  CHANGELOG.md  IDEAS_MEJORA_HIERSET.md  PLAN_BIGRU.md  PLAN_MEJORA1_BIGRU.md  PLAN_MLP.md  PLAN_MULTI_BIGRU.md  PLAN_TOKEN_BIGRU.md  PROGRESS.md  REPORT_SHALLOW_NN.md  STUDY_GUIDE_DEEP_NN.md  draft.md
docs/imagenes/: model_arch.mmd
docs/implementation/: 1_environment.md  2_data_pipeline.md  3_models.md  4_experiments.md  5_eda.md  bvbrc_api.md
docs/proposal/: INDEX.md  conceptos.md  proposal.md  sources.md
docs/reference/: bvbrc_api.md
proposal/: conceptos.md  progress_log.md  proposal.md  proposal_research.md
results/: prepare_hier_256_output.txt
results/bigru_v1/: OUTPUT.txt  best_model.pt  history.csv  metrics.json
results/bigru_v2/: OUTPUT.txt  best_model.pt  history.csv  metrics.json
results/hier_bigru/: best_model.pt  history.csv  metrics.json  params.json
results/hier_set/: best_model.pt  history.csv  metrics.json  params.json  per_antibiotic_thresholds.json
results/hier_set_v2/: OUTPUT.txt  best_model.pt  history.csv  (+2 more)
scripts/: per_antibiotic_threshold.py
src/: README.md  analyze_attention.py  dataset.py  eda.py  mlp_model.py
teaching_materials/: shallow_NN_10.ipynb
tests/: test_dataset.py  test_mlp.py  test_train.py
(+71 files in other folders)
